<?xml version="1.0"?>
<package format="3">
  <name>zx200_p2p_motion</name>
  <version>0.1.0</version>
  <description>Continuous Cartesian trajectory following for ZX200 bucket end motion</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
</package>